--- a/src/container/App.css
+++ b/src/container/App.css
@@ -1,5 +1,20 @@
+@font-face {
+  font-family: 'SEGA LOGO FONT';
+  font-style: normal;
+  font-weight: normal;
+  src: local('SEGA LOGO FONT'), url('SEGA.woff') format('woff');
+}
+
 .App {
   text-align: center;
+  margin: 0 1%
+
+}
+
+h1 {
+  font-family: 'SEGA LOGO FONT';
+  font-weight: 200;
+  color: #0ccac4;
 }
 
 .App-logo {
